Sales eda by department store and category, WIP on validation

--- a/m5/m5-acc-eda.ipynb
+++ b/m5/m5-acc-eda.ipynb
@@ -16,6 +16,21 @@
             "pygments_lexer": "ipython3",
             "nbconvert_exporter": "python",
             "file_extension": ".py"
+        },
+        "kaggle": {
+            "accelerator": "none",
+            "dataSources": [
+                {
+                    "sourceId": 18599,
+                    "databundleVersionId": 1236839,
+                    "sourceType": "competition"
+                }
+            ],
+            "dockerImageVersionId": 30746,
+            "isInternetEnabled": true,
+            "language": "python",
+            "sourceType": "notebook",
+            "isGpuEnabled": false
         }
     },
     "nbformat_minor": 4,
@@ -32,7 +47,7 @@
         },
         {
             "cell_type": "code",
-            "source": "INPUT_BASE_PATH = \"/kaggle/input/m5-forecasting-accuracy\"\nOUTPUT_BASE_BATH = \"/kaggle/working\"\n\nCALENDAR_DATA = pd.read_csv(f\"{INPUT_BASE_PATH}/calendar.csv\")\nSELL_PRICES = pd.read_csv(f\"{INPUT_BASE_PATH}/sell_prices.csv\")\nSALES_TRAIN_EVALUATION = pd.read_csv(f\"{INPUT_BASE_PATH}/sales_train_evaluation.csv\")\nSALES_TRAIN_VALIDATION = pd.read_csv(f\"{INPUT_BASE_PATH}/sales_train_validation.csv\")\nSAMPLE_SUBMISSION = pd.read_csv(f\"{INPUT_BASE_PATH}/sample_submission.csv\")",
+            "source": "INPUT_BASE_PATH = \"/kaggle/input/m5-forecasting-accuracy\"\nOUTPUT_BASE_BATH = \"/kaggle/working\"\n\nCALENDAR_DATA = pd.read_csv(f\"{INPUT_BASE_PATH}/calendar.csv\")\n# SELL_PRICES = pd.read_csv(f\"{INPUT_BASE_PATH}/sell_prices.csv\")\n# SALES_TRAIN_EVALUATION = pd.read_csv(f\"{INPUT_BASE_PATH}/sales_train_evaluation.csv\")\nSALES_TRAIN_VALIDATION = pd.read_csv(f\"{INPUT_BASE_PATH}/sales_train_validation.csv\")\nSAMPLE_SUBMISSION = pd.read_csv(f\"{INPUT_BASE_PATH}/sample_submission.csv\")",
             "metadata": {
                 "trusted": true
             },
@@ -41,7 +56,7 @@
         },
         {
             "cell_type": "code",
-            "source": "def get_product_id_mappings(df: pd.DataFrame):\n    id_to_int = {\n        product_id: i\n        for (i, product_id) in enumerate(df[\"id\"].unique(), start=1)\n    }\n    int_to_id = {v: k for (k,v) in id_to_int.items()}\n    return id_to_int, int_to_id\n\n\ndef flatten_sales_df(df: pd.DataFrame) -> pd.DataFrame:\n    sales_dfs = []\n    timestamp_cols = [f\"d_{i}\" for i in range(1, 1914)]\n    product_ids = df[\"product_id\"].unique()\n    for p_id in tqdm(product_ids):\n        sales_df = df[df[\"product_id\"] == p_id]\n        sales_df = sales_df[timestamp_cols].T.reset_index()\n        sales_df.columns = [\"timestamp_id\", \"count\"]\n        sales_df[\"product_id\"] = p_id\n        sales_dfs.append(sales_df)\n\n    return pd.concat(sales_dfs)\n    ",
+            "source": "def get_product_id_mappings(df: pd.DataFrame):\n    id_to_int = {\n        product_id: i\n        for (i, product_id) in enumerate(df[\"id\"].unique(), start=1)\n    }\n    int_to_id = {v: k for (k,v) in id_to_int.items()}\n    return id_to_int, int_to_id\n\n\ndef flatten_sales_df(sales_df: pd.DataFrame, timestamp_cols: list[str]) -> pd.DataFrame:\n    sales_dfs = []\n    grouper = train_df.groupby(\n        [\n            \"item_id\",\n            \"dept_id\",\n            \"cat_id\",\n            \"store_id\",\n            \"state_id\"\n        ]\n    )\n    for key, sales_df in tqdm(grouper):\n        (item, dept, cat, store, state) = key\n        sales_df = sales_df[timestamp_cols].T.reset_index()\n        sales_df.columns = [\"d\", \"count\"]\n        sales_df[\"item_id\"] = item\n        sales_df[\"dept_id\"] = dept\n        sales_df[\"cat_id\"] = cat\n        sales_df[\"store_id\"] = store\n        sales_df[\"state_id\"] = state\n        sales_dfs.append(sales_df)\n    return pd.concat(sales_dfs)\n        \n\ndef merge_sales_and_calendar_data(sales_df: pd.DataFrame, calendar_data: pd.DataFrame) -> pd.DataFrame:\n    return sales_df.merge(right=calendar_data, on=\"d\", how=\"left\")",
             "metadata": {
                 "trusted": true
             },
@@ -50,7 +65,7 @@
         },
         {
             "cell_type": "code",
-            "source": "timestamp_cols = [f\"d_{i}\" for i in range(1, 1914)]\n\n# Simplify product id mappings\nproduct_id_to_int, int_to_product_id = get_product_id_mappings(SALES_TRAIN_VALIDATION)\ntrain_df = SALES_TRAIN_VALIDATION.copy(deep=True)\ntrain_df[\"product_id\"] = train_df[\"id\"].map(product_id_to_int)",
+            "source": "timestamp_cols = [f\"d_{i}\" for i in range(1, 1914)]\n\ntrain_df = SALES_TRAIN_VALIDATION.copy(deep=True)\ntrain_df = flatten_sales_df(train_df, timestamp_cols)\ntrain_df = merge_sales_and_calendar_data(train_df, CALENDAR_DATA)",
             "metadata": {
                 "trusted": true
             },
@@ -72,7 +87,7 @@
         },
         {
             "cell_type": "code",
-            "source": "store_ids = list(train_df[\"store_id\"].unique())\n\nn_samples = 500\n\nfig, ax = plt.subplots(5, 2, sharex=True, sharey=True, figsize=(15, 10))\nax = ax.flatten()\nfor i, store_id in enumerate(store_ids):\n    store_df = train_df[train_df[\"store_id\"] == store_id].copy(deep=True)\n    total_sales = store_df[timestamp_cols].sum(axis=0)\n    total_sales = total_sales.iloc[-n_samples:]\n    ax[i].plot(np.arange(n_samples), total_sales.values, label=store_id)\n    ax[i].legend()\n\nfig.tight_layout();",
+            "source": "sales_by_store = train_df.groupby([\"store_id\", \"date\"])[[\"count\"]].sum()\nstore_ids = ['CA_1', 'CA_2', 'CA_3', 'CA_4', 'TX_1', 'TX_2', 'TX_3', 'WI_1', 'WI_2', 'WI_3']\nn_samples = 500\n\nfig, ax = plt.subplots(5, 2, sharex=True, sharey=True, figsize=(15, 10))\nax = ax.flatten()\nfor i, store_id in enumerate(store_ids):\n    store_df = sales_by_store.loc[(store_id, slice(None))].copy().reset_index()\n    store_df = store_df.iloc[-n_samples:]\n    ax[i].plot(np.arange(n_samples), store_df[\"count\"].values, label=store_id)\n    \n    date_labels = store_df[\"date\"].values[::100]\n    x_ticks = np.arange(0, n_samples, 100)\n    ax[i].set_xticks(x_ticks)\n    ax[i].set_xticklabels(date_labels, rotation=45)\n    ax[i].legend()\n\nfig.tight_layout();",
             "metadata": {
                 "trusted": true
             },
@@ -93,14 +108,39 @@
             }
         },
         {
+            "cell_type": "code",
+            "source": "sales_by_category = train_df.groupby([\"cat_id\", \"date\"])[[\"count\"]].sum()\ncategory_ids = [\"FOODS\", \"HOBBIES\", \"HOUSEHOLD\"]\n\nn_samples = 500\nfig, ax = plt.subplots(3, 1, figsize=(8, 6), sharex=True)\nfor i, cat_id in enumerate(category_ids):\n    cat_df = sales_by_category.loc[(cat_id, slice(None))].copy().reset_index()\n    cat_df = cat_df.iloc[-n_samples:]\n    ax[i].plot(np.arange(n_samples), cat_df[\"count\"].values, label=cat_id)\n    \n    date_labels = cat_df[\"date\"].values[::100]\n    x_ticks = np.arange(0, n_samples, 100)\n    ax[i].set_xticks(x_ticks)\n    ax[i].set_xticklabels(date_labels, rotation=45)\n\n    ax[i].legend()\nfig.tight_layout();",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
+        },
+        {
             "cell_type": "markdown",
-            "source": "# SALES BY DEPARTMENT",
+            "source": "# SALES BY CATEGORY & STORE",
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "source": "",
-            "metadata": {},
+            "source": "sales_by_store_and_cat = train_df.groupby([\"store_id\", \"cat_id\", \"date\"])[[\"count\"]].sum()\nstore_ids = ['CA_1', 'CA_2', 'CA_3', 'CA_4', 'TX_1', 'TX_2', 'TX_3', 'WI_1', 'WI_2', 'WI_3']\ncategory_ids = [\"FOODS\", \"HOBBIES\", \"HOUSEHOLD\"]\nn_samples = 500\n\nfig, ax = plt.subplots(5, 2, sharex=True, sharey=True, figsize=(15, 10))\nax = ax.flatten()\nfor i, store_id in enumerate(store_ids):\n    store_df = sales_by_store_and_cat.loc[store_id]\n    for cat_id in [\"FOODS\", \"HOBBIES\", \"HOUSEHOLD\"]:\n        cat_df = store_df.loc[cat_id].reset_index()\n        cat_df = cat_df.iloc[-n_samples:]\n        ax[i].plot(np.arange(n_samples), cat_df[\"count\"].values, label=(store_id, cat_id))\n\n    ax[i].legend(fontsize=\"small\", ncols=3)\n    \n    date_labels = cat_df[\"date\"].values[::100]\n    x_ticks = np.arange(0, n_samples, 100)\n    ax[i].set_xticks(x_ticks)\n    ax[i].set_xticklabels(date_labels, rotation=45)\n\nfig.tight_layout();",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
+        },
+        {
+            "cell_type": "markdown",
+            "source": "# SALES BY STORE & DEPARTMENT",
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "source": "sales_by_store_and_dept = train_df.groupby([\"store_id\", \"dept_id\", \"date\"])[[\"count\"]].sum()\nstore_ids = ['CA_1', 'CA_2', 'CA_3', 'CA_4', 'TX_1', 'TX_2', 'TX_3', 'WI_1', 'WI_2', 'WI_3']\n\nn_samples = 500\n\nfig, ax = plt.subplots(5, 2, sharex=True, sharey=True, figsize=(15, 10))\nax = ax.flatten()\nfor i, store_id in enumerate(store_ids):\n    store_df = sales_by_store_and_dept.loc[store_id]\n    store_df = store_df.unstack(level=0).droplevel(level=0, axis=1)\n    store_df = store_df.iloc[-n_samples:]\n    ax[i] = store_df.plot(ax=ax[i])\n    \n    ax[i].legend(fontsize=\"x-small\", ncols=4)\n    ax[i].set_title(store_id)\n\nfig.tight_layout();",
+            "metadata": {
+                "trusted": true
+            },
             "execution_count": null,
             "outputs": []
         }
