WIP improved validation plotting

--- a/m5/m5-acc-lightgbm.ipynb
+++ b/m5/m5-acc-lightgbm.ipynb
@@ -95,7 +95,7 @@
         },
         {
             "cell_type": "code",
-            "source": "start_t = 1 if SUBMISSION_RUN else 1000\ntrain_timestamp_cols = [f\"d_{i}\" for i in range(start_t, 1941)]\n\n# Process sales data\nitem_id_map = get_item_id_map(SALES_TRAIN_EVALUATION)\nSALES_TRAIN_EVALUATION[\"item_id\"] = SALES_TRAIN_EVALUATION[\"item_id\"].map(item_id_map)\n\ndept_id_map = get_dept_id_map(SALES_TRAIN_EVALUATION)\nSALES_TRAIN_EVALUATION[\"dept_id\"] = SALES_TRAIN_EVALUATION[\"dept_id\"].map(dept_id_map)\n\ncat_id_map = get_cat_id_map(SALES_TRAIN_EVALUATION)\nSALES_TRAIN_EVALUATION[\"cat_id\"] = SALES_TRAIN_EVALUATION[\"cat_id\"].map(cat_id_map)\n\nstore_id_map = get_store_id_map(SALES_TRAIN_EVALUATION)\nSALES_TRAIN_EVALUATION[\"store_id\"] = SALES_TRAIN_EVALUATION[\"store_id\"].map(store_id_map)\n\nstate_id_map = get_state_id_map(SALES_TRAIN_EVALUATION)\nSALES_TRAIN_EVALUATION[\"state_id\"] = SALES_TRAIN_EVALUATION[\"state_id\"].map(state_id_map)\n\ntrain_df = flatten_sales_df(SALES_TRAIN_EVALUATION, train_timestamp_cols)\n\n# Process calendar data\ncalendar_data = select_format_calendar_features(CALENDAR_DATA)\nevent_name_map = get_event_name_map(calendar_data)\nevent_type_map = get_event_type_map(calendar_data)\ncalendar_data[\"event_name\"] = calendar_data[\"event_name\"].map(event_name_map)\ncalendar_data[\"event_type\"] = calendar_data[\"event_type\"].map(event_type_map)\n\n# Merge sales and calendar data\ntrain_df = merge_sales_and_calendar_data(train_df, calendar_data)",
+            "source": "start_t = 1 if SUBMISSION_RUN else 1000\ntrain_timestamp_cols = [f\"d_{i}\" for i in range(start_t, 1941)]\n\n# Process sales data\nitem_id_map = get_item_id_map(SALES_TRAIN_EVALUATION)\nid_item_map = {v: k for (k, v) in item_id_map.items()}\nSALES_TRAIN_EVALUATION[\"item_id\"] = SALES_TRAIN_EVALUATION[\"item_id\"].map(item_id_map)\n\ndept_id_map = get_dept_id_map(SALES_TRAIN_EVALUATION)\nid_dept_map = {v: k for (k, v) in dept_id_map.items()}\nSALES_TRAIN_EVALUATION[\"dept_id\"] = SALES_TRAIN_EVALUATION[\"dept_id\"].map(dept_id_map)\n\ncat_id_map = get_cat_id_map(SALES_TRAIN_EVALUATION)\nid_cat_map = {v: k for (k, v) in cat_id_map.items()}\nSALES_TRAIN_EVALUATION[\"cat_id\"] = SALES_TRAIN_EVALUATION[\"cat_id\"].map(cat_id_map)\n\nstore_id_map = get_store_id_map(SALES_TRAIN_EVALUATION)\nid_store_map = {v: k for (k, v) in store_id_map.items()}\nSALES_TRAIN_EVALUATION[\"store_id\"] = SALES_TRAIN_EVALUATION[\"store_id\"].map(store_id_map)\n\nstate_id_map = get_state_id_map(SALES_TRAIN_EVALUATION)\nid_state_map = {v: k for (k, v) in state_id_map.items()}\nSALES_TRAIN_EVALUATION[\"state_id\"] = SALES_TRAIN_EVALUATION[\"state_id\"].map(state_id_map)\n\ntrain_df = flatten_sales_df(SALES_TRAIN_EVALUATION, train_timestamp_cols)\n\n# Process calendar data\ncalendar_data = select_format_calendar_features(CALENDAR_DATA)\nevent_name_map = get_event_name_map(calendar_data)\nevent_type_map = get_event_type_map(calendar_data)\ncalendar_data[\"event_name\"] = calendar_data[\"event_name\"].map(event_name_map)\ncalendar_data[\"event_type\"] = calendar_data[\"event_type\"].map(event_type_map)\n\n# Merge sales and calendar data\ntrain_df = merge_sales_and_calendar_data(train_df, calendar_data)",
             "metadata": {
                 "trusted": true
             },
@@ -109,7 +109,16 @@
         },
         {
             "cell_type": "code",
-            "source": "# Rolling window validation\n\ndef time_series_split(\n    df: pd.DataFrame,\n    n_folds: int = 5,\n    horizon: int = 28,\n    overlap: int = 14,\n    max_timestamp: int = 1941,\n):\n    min_timestamp = max_timestamp - n_folds * horizon + (n_folds - 1) * overlap\n    for fold_idx in range(n_folds):\n        start = min_timestamp + fold_idx * (horizon - overlap)\n        stop = start + horizon\n\n        train_data = df[df[\"d\"] < start].copy()\n        valid_data = df[(df[\"d\"] >= start) & (df[\"d\"] < stop)].copy()\n        \n        print(f\"Fold index: {fold_idx}\")\n        print(f\"Train (start, end): ({train_data['d'].min()}, {train_data['d'].max()})\")\n        print(f\"Valid (start, end): ({valid_data['d'].min()}, {valid_data['d'].max()})\")\n        print(\"==================\")\n        \n        yield train_data, valid_data\n        \n\ndef validation_plot(\n    valid_df: pd.DataFrame,\n    state: str,  #[\"CA\", \"TX\", \"WI\"]\n    cat: str, # [\"FOODS\", \"HOBBIES\", \"HOUSEHOLD\"]\n):\n    state_id = state_id_map[state]\n    cat_id = cat_id_map[cat]\n    \n    state_cat_df = valid[(valid[\"state_id\"] == state_id) & (valid[\"cat_id\"] == cat_id)]\n    g = state_cat_df.groupby([\"store_id\", \"dept_id\", \"date\"])[[\"count\", \"forecast\"]].sum()\n    store_ids = g.index.get_level_values(\"store_id\").unique()\n    \n    fig, ax = plt.subplots(len(store_ids), 1, figsize=(8, 2 * len(store_ids)), sharex=True)\n    colors = cm.viridis(np.linspace(0, 1, 5))\n    for i, store_id in enumerate(store_ids):\n        ts = g.loc[store_id]\n        for j, dept_id in enumerate(ts.index.get_level_values(\"dept_id\").unique()):\n            ax[i].plot(\n                ts.loc[dept_id].index,\n                ts.loc[dept_id][\"count\"].values,\n                label=\"ground truth\",\n                color=colors[j]\n            )\n            ax[i].plot(\n                ts.loc[dept_id].index,\n                ts.loc[dept_id][\"forecast\"].values,\n                label=\"forecast\",\n                color=colors[j],\n                ls=\"--\"\n            )\n        ax[i].set(ylabel=\"count\")\n        ax[i].set_title(store_id)\n\n    for tick in ax[-1].get_xticklabels():\n        tick.set_rotation(45)\n\n    fig.tight_layout()\n    ",
+            "source": "# Rolling window validation\n\ndef time_series_split(\n    df: pd.DataFrame,\n    n_folds: int = 5,\n    horizon: int = 28,\n    overlap: int = 14,\n    max_timestamp: int = 1941,\n):\n    min_timestamp = max_timestamp - n_folds * horizon + (n_folds - 1) * overlap\n    for fold_idx in range(n_folds):\n        start = min_timestamp + fold_idx * (horizon - overlap)\n        stop = start + horizon\n\n        train_data = df[df[\"d\"] < start].copy()\n        valid_data = df[(df[\"d\"] >= start) & (df[\"d\"] < stop)].copy()\n        \n        print(f\"Fold index: {fold_idx}\")\n        print(f\"Train idx (start, end): ({train_data['d'].min()}, {train_data['d'].max()})\")\n        print(f\"Valid idx (start, end): ({valid_data['d'].min()}, {valid_data['d'].max()})\")\n        print(\"==================\")\n        \n        yield train_data, valid_data\n        \n        \ndef train_predict_score(\n    X_train: pd.DataFrame,\n    y_train: pd.Series,\n    X_test: pd.DataFrame,\n    y_test: pd.Series,\n) -> float:\n    ...\n        ",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
+        },
+        {
+            "cell_type": "code",
+            "source": "def item_level_validation_plot(\n    valid_df: pd.DataFrame,\n    item_id: int,\n    store_\n):\n    ...\n\n\ndef aggregate_validation_plot(\n    valid_df: pd.DataFrame,\n    state: str,  #[\"CA\", \"TX\", \"WI\"]\n    cat: str, # [\"FOODS\", \"HOBBIES\", \"HOUSEHOLD\"]\n):\n    state_id = state_id_map[state]\n    cat_id = cat_id_map[cat]\n    \n    state_cat_df = valid[(valid[\"state_id\"] == state_id) & (valid[\"cat_id\"] == cat_id)]\n    g = state_cat_df.groupby([\"store_id\", \"dept_id\", \"date\"])[[\"count\", \"forecast\"]].sum()\n    \n    store_ids = g.index.get_level_values(\"store_id\").unique()\n    fig, ax = plt.subplots(len(store_ids), 1, figsize=(8, 2 * len(store_ids)), sharex=True)\n    colors = cm.viridis(np.linspace(0, 1, 5))\n    for i, store_id in enumerate(store_ids):\n        ts = g.loc[store_id]\n        \n        dept_ids = ts.index.get_level_values(\"dept_id\").unique()\n        for j, dept_id in enumerate(dept_ids):\n            ax[i].plot(\n                ts.loc[dept_id].index,\n                ts.loc[dept_id][\"count\"].values,\n                label=id_dept_map[dept_id],\n                color=colors[j]\n            )\n            ax[i].plot(\n                ts.loc[dept_id].index,\n                ts.loc[dept_id][\"forecast\"].values,\n                color=colors[j],\n                ls=\"--\"\n            )\n        ax[i].set(ylabel=\"count\", title=id_store_map[store_id])\n        ax[i].legend()\n\n    for tick in ax[-1].get_xticklabels():\n        tick.set_rotation(45)\n\n    fig.tight_layout()\n    ",
             "metadata": {
                 "trusted": true
             },
@@ -163,7 +172,34 @@
         },
         {
             "cell_type": "code",
-            "source": "validation_plot(valid, \"CA\", \"HOUSEHOLD\")",
+            "source": "aggregate_validation_plot(valid, \"CA\", \"HOUSEHOLD\")",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
+        },
+        {
+            "cell_type": "code",
+            "source": "item_id = 0\nvalid_for_item = valid[valid[\"item_id\"] == item_id].copy()\nvalid_for_item",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
+        },
+        {
+            "cell_type": "code",
+            "source": "\nstore_ids = list(valid_for_item[\"store_id\"].unique())\n\nfig, ax = plt.subplots(len(store_ids), 1, figsize=(8, 2 * len(store_ids)), sharex=True)\ncolors = cm.viridis(np.linspace(0, 1, len(store_ids)))\n\nfor i, store_id in enumerate(store_ids):\n    valid_for_store = valid_for_item[valid_for_item[\"store_id\"] == store_id]\n    ax[i].plot(\n        valid_for_store[\"date\"].values,\n        valid_for_store[\"count\"].values,\n        label=id_store_map[store_id],\n        color=colors[i]\n    )\n    ax[i].plot(\n        valid_for_store[\"date\"].values,\n        valid_for_store[\"forecast\"].values,\n        color=colors[i],\n        ls=\"--\",\n    )\n    ax[i].set(ylabel=id_store_map[store_id])\nax[0].set(title=id_i)\n",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
+        },
+        {
+            "cell_type": "code",
+            "source": "SALES_TRAIN_EVALUATION.head()",
             "metadata": {
                 "trusted": true
             },
